Feat: profile picture upload, IGDB quality filters, shelf URL state, editorial cover grid   Profile picture upload (full stack):   - Add ImageProcessingUtil: center-crop → 256×256 → JPEG 85% pipeline   - Add StorageService interface + LocalStorageService (disk, @Primary, S3-swappable)   - Add ProfilePictureService: validates type/size, processes, stores, deletes old avatar   - Add ProfileController: GET /api/profile/me, POST /api/profile/picture   - Add WebConfig: serves /uploads/** as static resources   - Allow /uploads/** in SecurityConfig without auth   - Add TwelveMonkeys imageio-webp to pom.xml for WebP decoding   - Add upload.dir / upload.base-url / multipart size config to application.properties   - Add profilePictureUrl field to User entity   - Add userService.getProfile() and userService.uploadProfilePicture() to api.js   - Update UserProfile: avatar click opens file picker, instant blob preview during upload,     replaces with server URL on success, error message on failure
  IGDB browse/trending quality filters:
  - Trending: fetch 40 popularity candidates, filter rating_count > 50, trim to 12 in Java
    (fixes limit running before sort; prevents viral novelties from dominating)
  - Browse: raise floor to rating_count > 500 & rating > 75 (eliminates low-vote high-score noise)
  - Batch IGDB backfill in GameLogService for missing releaseYear/igdbRating on shelf load

  Shelf filter/sort/view persistence:
  - Replace useState for activeFilter, sortOption, viewMode with useSearchParams
  - State lives in URL (?filter=PLAYING&sort=DATE_ADDED&view=list) — survives refresh,
    supports back/forward, shareable

  Landing editorial cover grid:
  - Add EDITORIAL_IGDB_IDS constant (4 hardcoded IGDB IDs, user-configurable)
  - Fetch covers independently from trending on mount
  - Fix CSS: remove conflicting aspect-ratio/flex from editorialCard so grid fills correctly,
    object-fit: cover crops portrait covers into grid cells